--- a/djangoEcom/ecommerce/cards/templates/cards/snippets/card_form.html
+++ b/djangoEcom/ecommerce/cards/templates/cards/snippets/card_form.html
@@ -124,7 +124,7 @@
 
 	      	// OKAY This worked or Failed
 	      	console.log(data)
-	      	window.location.href = `${window.location.origin}/${next_url}`
+	      	window.location.href = `${next_url}`
 	      })
 	      .catch(err => {
 	      	console.log(err)
