--- a/djangoEcom/ecommerce/templates/account/password_change.html
+++ b/djangoEcom/ecommerce/templates/account/password_change.html
@@ -1,15 +1,33 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
+{% load static %}
 {% load i18n %}
+
+{% load crispy_forms_tags %}
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
+	<!-- Page info -->
+	<div class="page-info-section set-bg" data-setbg="{% static 'img/page-bg/2.jpg' %}">
+		<div class="container">
+			<div class="site-breadcrumb">
+				<a href="{% url 'index' %}">Home</a>
+				<span>Profile</span>
+			</div>
+		</div>
+	</div>
+	<!-- Page info end -->
+
+
+	{% include "snippets/search_form.html" %}
+
+	<div class="container my-5">
     <h1>{% trans "Change Password" %}</h1>
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+    <form method="POST" action="{% url 'account_change_password' slug=user.profile.slug %}" class="password_change">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form | crispy }}
         <button type="submit" name="action">{% trans "Change Password" %}</button>
         <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
     </form>
