--- a/djangoEcom/ecommerce/courses/templates/courses/course_detail.html
+++ b/djangoEcom/ecommerce/courses/templates/courses/course_detail.html
@@ -138,38 +138,62 @@
 					<a href="{% url 'lessons:lesson_create' course.slug %}">Add Lesson</a>
 					<hr>
 				{% endif %}
-				{% for lesson in course.lesson_set.all %}
-					{% if user == course.user  or course in user.profile.courses.all %}
+				
+
+				{% if purchased_lesson %}
+					<div class="certDiv" data="{{course.slug}}"></div>
+					{% for lesson in purchased_lesson %}
 						<div class="card my-3">
 							
 							<div class="card-header">
-								<a href="{% url 'lessons:lesson_detail' lesson.slug %}">
+								<p>{{lesson.slug}}</p>
+								<a href="{% url 'lessons:lesson_detail' lesson.lesson.slug %}">
+									<p><span class='font-weight-bold text-primary'>{{forloop.counter}}.</span> {{lesson.lesson.name}}</p>
+									<p>{{lesson.lesson.short_description}}</p>
+								</a>
+								<input onclick="updateLesson({{lesson.user.id}}, {{course.id}}, {{lesson.id}})" type="checkbox" {% if lesson.completed %} checked {% endif %}> Completed?  {{lesson.completed}}
+							</div>
+							<div class="card-body">
+								{{lesson.lesson.long_description | safe}}
+							</div>
+							
+						</div>
+					{% endfor %}
+
+				{% else %}
+					{% for lesson in course.lesson_set.all %}
+						{% if user == course.user  or course in user.profile.courses.all %}
+							<div class="card my-3">
+								
+								<div class="card-header">
+									<a href="{% url 'lessons:lesson_detail' lesson.slug %}">
+										<p><span class='font-weight-bold text-primary'>{{forloop.counter}}.</span> {{lesson.name}}</p>
+										<p>{{lesson.short_description}}</p>
+									</a>
+								</div>
+								<div class="card-body">
+									{{lesson.long_description | safe}}
+								</div>
+								
+							</div>
+						{% else %}
+							<div class="card my-3">
+								
+								<div class="card-header">
+							
 									<p><span class='font-weight-bold text-primary'>{{forloop.counter}}.</span> {{lesson.name}}</p>
 									<p>{{lesson.short_description}}</p>
-								</a>
-							</div>
-							<div class="card-body">
-								{{lesson.long_description | safe}}
-							</div>
 							
-						</div>
-					{% else %}
-						<div class="card my-3">
-							
-							<div class="card-header">
+								</div>
+								<div class="card-body">
+									{{lesson.long_description | safe | truncatechars:100 }}
+								</div>
+								
+							</div>
+						{% endif %}
 						
-								<p><span class='font-weight-bold text-primary'>{{forloop.counter}}.</span> {{lesson.name}}</p>
-								<p>{{lesson.short_description}}</p>
-						
-							</div>
-							<div class="card-body">
-								{{lesson.long_description | safe | truncatechars:100 }}
-							</div>
-							
-						</div>
-					{% endif %}
-					
-				{% endfor %}
+					{% endfor %}
+				{% endif %}
 
 			</div>
 		</div>
@@ -212,7 +236,11 @@
 		</div>
 	</section>
 	<!-- Page end -->
+	{{ request.user.id | json_script:"user_id" }}
+	{{ course.id | json_script:"course_id" }}
+
 	<script src="{% static 'js/star_rating.js' %}"></script>
+	<script src="{% static 'js/lesson_completed.js' %}"></script>
 {% endblock %}
 
 
