--- a/djangoEcom/ecommerce/templates/snippets/search_form.html
+++ b/djangoEcom/ecommerce/templates/snippets/search_form.html
@@ -8,9 +8,9 @@
 				<div class="row">
 					<div class="col-lg-10 offset-lg-1">
 						<!-- search form -->
-						<form class="course-search-form">
-							<input type="text" placeholder="Course">
-							<input type="text" class="last-m" placeholder="Category">
+						<form class="course-search-form text-center" action="{% url 'courses:course_search' %}">
+							<input class='w-100 mb-4' type="text" placeholder="Course" name='course'>
+							
 							<button class="site-btn btn-dark">Search Couse</button>
 						</form>
 					</div>
