django qanda multiple file uploads and limit file types

--- a/djangoQA/firstproject/templates/base.html
+++ b/djangoQA/firstproject/templates/base.html
@@ -28,6 +28,9 @@
 		        <li class="nav-item">
 		          <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
 		        </li>
+		        <li class="nav-item">
+		          <a class="nav-link" href="{% url 'uploadfiles:image_list' %}">Image List</a>
+		        </li>
 		      </ul>
 		    </div>
 		  </div>
