--- a/jsIntro/class_based_component/src/index.css
+++ b/jsIntro/class_based_component/src/index.css
@@ -1,7 +1,9 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+    text-align: center;
+    margin-top: 4rem;
 }
-
