--- a/reactIntro/birthday_reminder/src/UI/Button.module.css
+++ b/reactIntro/birthday_reminder/src/UI/Button.module.css
@@ -1,9 +1,8 @@
-.button {
-    padding: .5rem 1rem;
+.button{
+    border-radius: 1rem;
+    padding: 1rem 2rem;
+    border: none;
     background: pink;
     color: white;
-    border: none;
-    box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.5);
-    border-radius: 0.5rem;
-    
+    box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.8);
 }
