--- a/reactIntro/birthday_reminder/src/index.css
+++ b/reactIntro/birthday_reminder/src/index.css
@@ -1,11 +1,19 @@
-* {
+*{
   font-family: Arial, Helvetica, sans-serif;
-  box-sizing: border-box;
   padding: 0;
   margin: 0;
-  
+  box-sizing: border-box;
 }
 
-body {
+body{
   background: pink;
+  margin-top: 5rem;
+}
+
+.clearButton{
+  text-align: center;
+}
+
+.clearButton button{
+  width: 90%;
 }
