--- a/reactIntro/tours_project_redone/src/index.css
+++ b/reactIntro/tours_project_redone/src/index.css
@@ -1,13 +1,16 @@
-body {
+*{
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  text-align: center;
+  background: #555;
+}
+
+.isLoadingText{
+  font-size: 1.5rem;
+  font-weight: bold;
 }
